force-app/main/default/objects/Pizza__c/Pizza__c.object-meta.xml
<CustomObject>
    <description>A Pizza that is sold by the company.</description>
    <label>Pizza</label>
    <nameField>
        <displayFormat>Pizza {000} {MM}/{DD}/{YYYY}</displayFormat>
        <label>Pizza Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pizzas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>