force-app/main/default/objects/Pizza__c/fields/isFinished__c.field-meta.xml
<CustomField>
    <fullName>isFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the pizza is ready to be delivered to the customer, unchecked if the pizza is still being made</description>
    <label>Finished</label>
    <type>Checkbox</type>
</CustomField>