force-app/main/default/objects/Pizza__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>999.99</defaultValue>
    <description>The price of the pizza in USD - generated automatically</description>
    <label>Price USD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>