force-app/main/default/objects/Pizza__c/fields/Shopping_Cart__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The shopping cart that this pizza belongs to.</description>
    <label>Shopping Cart</label>
    <referenceTo>Shopping_Cart__c</referenceTo>
    <relationshipLabel>Pizzas</relationshipLabel>
    <relationshipName>Pizzas</relationshipName>
    <type>Lookup</type>
</CustomField>