force-app/main/default/objects/Pizza__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>The size of the pizza</description>
    <label>Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Extra_Large</fullName>
                <label>Extra Large</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>