force-app/main/default/objects/Pizza__c/fields/Toppings__c.field-meta.xml
<CustomField>
    <fullName>Toppings__c</fullName>
    <description>The toppings of the pizza - select all that apply.</description>
    <label>Toppings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pepporoni</fullName>
            </value>
            <value>
                <fullName>Bacon</fullName>
            </value>
            <value>
                <fullName>Sausage</fullName>
            </value>
            <value>
                <fullName>Pineapple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>