force-app/main/default/objects/Pizza__c/recordTypes/Custom_Order.recordType-meta.xml
<RecordType>
    <fullName>Custom_Order</fullName>
    <active>true</active>
    <description>A pizza which was designed by the customer</description>
    <label>Custom Order</label>
</RecordType>