force-app/main/default/objects/Pizza__c/recordTypes/meatLoverSpecial.recordType-meta.xml
<RecordType>
    <fullName>meatLoverSpecial</fullName>
    <active>true</active>
    <description>A special pizza which is eligible for a discount but must be extra large and can only contain meat toppings.</description>
    <label>Meat Lover&apos;s Special</label>
</RecordType>