force-app/main/default/objects/Pizza__c/validationRules/CannotChangeFinishedPizza.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeFinishedPizza</fullName>
    <active>true</active>
    <description>Prevents updates to pizzas which are finished.</description>
    <errorConditionFormula>PRIORVALUE(isFinished__c)</errorConditionFormula>
    <errorMessage>This pizza is marked as &quot;finished&quot;. You cannot update a finished pizza. You can, however, still delete the pizza.</errorMessage>
</ValidationRule>