force-app/main/default/objects/Pizza__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Size__c</columns>
    <columns>Toppings__c</columns>
    <columns>Shopping_Cart__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>