force-app/main/default/objects/Pizza__c/listViews/Good_Pizzas_No_Pineapples.listView-meta.xml
<ListView>
    <fullName>Good_Pizzas_No_Pineapples</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Toppings__c</field>
        <operation>excludes</operation>
        <value>Pineapple</value>
    </filters>
    <label>Good Pizzas (no pineapples)</label>
</ListView>