force-app/main/default/objects/Pizza__c/listViews/Pizza_Approval_Pizza.listView-meta.xml
<ListView>
    <fullName>Pizza_Approval_Pizza</fullName>
    <filterScope>Queue</filterScope>
    <label>Pizza Approval</label>
    <queue>Pizza_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>